Adjust background image positioning to fix white space

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -137,7 +137,7 @@ body {
       text-align: center;
       align-items: center;
       height: auto;
-      margin: 3.8em 0 0 auto;
+      margin: 3.5em 0 0 auto;
       a {
           color: white;
           text-decoration: none;
